--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
         <h1>Bem-vindo!</h1>
         <p>Esta aula ficara disponivel temporariamente. Assista com calma</p>
 
-
+			<link rel="icon" type="image/png" href="icon.png">
 			<div style="padding:56.25% 0 0 0;position:relative;">
 			<iframe src="https://player.vimeo.com/video/1140876472?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
 			frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" 
-			referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="01 - SINALIZAÇÃO"></iframe>
+			referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="01 - SINALIZAÃ‡ÃƒO"></iframe>
 			</div><script src="https://player.vimeo.com/api/player.js"></script>
 
         
         <p>USO EXCLUSIVO ALUNOS CFC GUARDA - COMPARTILHAR ESTE LINK PODE CAUSAR PROBLEMAS</p>
     </div>
 </body>
+
 </html>
