--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AUTO ESCOLA GUARDA DOS FERREIROS - CURSINHO</title>
-	<link rel="icon" type="image/png" href="icon.png">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,4 +43,5 @@
 </body>
 
 </html>
+
 
