--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     clearInterval(intervaloContador); // Para de atualizar
                 } else {
                     const segundos = Math.ceil(restanteMS / 1000);
-                    mensagemTempoRestante.innerHTML = `O vídeo **expirará em ${segundos} segundos**.`;
+                    mensagemTempoRestante.innerHTML = `O vídeo expirará em ${segundos} segundos.`;
                 }
             }
 
@@ -132,5 +132,6 @@
     </script>
 </body>
 </html>
+
 
 
