--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         // ====================
 
         const TEMPO_LIMITE_MS = TEMPO_LIMITE_SEGUNDOS * 1000;
-        const CHAVE_STORAGE = 'videoAcessoInicio1';
+        const CHAVE_STORAGE = 'videoAcessoInicio';
 
         const areaDoVideo = document.getElementById('videoArea');
         const mensagemExp = document.getElementById('mensagemExpiracao');
@@ -155,6 +155,7 @@
     </script>
 </body>
 </html>
+
 
 
 
