--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="page-container">
 
         <div class="video-block">
-            <h1>CURSO 1: SINALIZAÇÃO AULA 01 e 02</h1>
+            <h1>AULA 01 - SINALIZAÇÃO</h1>
             
             <iframe 
                 src="https://player.vimeo.com/video/1140876472?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
@@ -61,7 +61,7 @@
         </div>
 
         <div class="video-block">
-            <h1>CURSO 2: DIREÇÃO DEFENSIVA - AULA 03</h1>
+            <h1>AULA 02 - SINALIZAÇÃO</h1>
             
             <iframe 
                 src="https://player.vimeo.com/video/1140903162?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
@@ -76,3 +76,4 @@
         </div>
 </body>
 </html>
+
